@@ -4615,8 +4615,11 @@ class cmd_bind(Command):
                     'This format does not remember old locations.')
             else:
                 if location is None:
-                    raise errors.BzrCommandError('No location supplied and no '
-                        'previous location known')
+                    if b.get_bound_location() is not None:
+                        raise errors.BzrCommandError('Branch is already bound')
+                    else:
+                        raise errors.BzrCommandError('No location supplied '
+                            'and no previous location known')
         b_other = Branch.open(location)
         try:
             b.bind(b_other)
